Fix various spacing

--- a/app/assets/stylesheets/front/2_components/author.sass
+++ b/app/assets/stylesheets/front/2_components/author.sass
@@ -90,6 +90,7 @@
     float: right
     width: 64px
     margin-left: 12px
+    margin-top: 0
 
   /*&__name
     font-weight: $font-semibold*/
